--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   file_selector: ^1.0.3
   path_provider: ^2.1.4
   path: ^1.9.0
+  watcher: ^1.1.0
 
 dev_dependencies:
   flutter_test:
